# legalize-sdks

./: .gitignore  AUDIT-2026-04-20.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT.md  PARITY.md  README.md  SECURITY.md  openapi-sdk.json  openapi.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dependabot-automerge.yml  go-ci.yml  go-integration.yml  go-publish.yml  node-ci.yml  node-integration.yml  node-publish.yml  openapi-sync.yml  python-ci.yml  python-integration.yml  python-publish.yml
curl/: README.md
go/: .gitignore  .golangci.yml  CHANGELOG.md  README.md  client.go  client_test.go  contract_test.go  countries.go  coverage_test.go  doc.go  env.go  env_test.go  errors.go  errors_test.go  example_test.go  generated.go  go.mod  headers_test.go  integration_test.go  jurisdictions.go  law_types.go  laws.go  options.go  pagination.go  pagination_test.go  reforms.go  resources_test.go  retry.go  retry_test.go  stats.go  types.go  version.go  webhooks.go  webhooks_resource.go  webhooks_test.go
go/examples/list_laws/: main.go
go/examples/search/: main.go
go/examples/time_travel/: main.go
go/examples/webhook_server/: main.go
go/internal/useragent/: useragent.go  useragent_test.go
node/: .gitignore  .prettierrc  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
node/examples/: list_laws.ts  search.ts  time_travel.ts  webhook_server_express.ts  webhook_server_fastify.ts
node/src/: client.ts  env.ts  errors.ts  generated.ts  index.ts  pagination.ts  retry.ts  types.ts  version.ts  webhooks.ts
node/src/resources/: countries.ts  jurisdictions.ts  lawTypes.ts  laws.ts  reforms.ts  stats.ts  webhooks.ts
node/tests/: _helpers.ts  client.test.ts  clientConstruction.test.ts  contract.test.ts  envResolution.test.ts  errors.test.ts  headers.test.ts  lastResponse.test.ts  pagination.test.ts  resources.test.ts  retry.test.ts  webhooks.test.ts
node/tests/integration/: readOnly.test.ts
python/: CHANGELOG.md  README.md  pyproject.toml
python/examples/: async_client.py  list_laws.py  search.py  stats.py  time_travel.py  webhook_server_fastapi.py  webhook_server_flask.py
python/src/legalize/: _client.py  _errors.py  _retry.py  webhooks.py
python/src/legalize/models/: _generated.py
python/src/legalize/resources/: _base.py  webhooks.py
python/tests/: conftest.py
python/tests/cassettes/: README.md  conftest.py  test_replay.py
python/tests/contract/: test_schemathesis.py
python/tests/integration/: conftest.py  test_async_smoke.py  test_read_only.py
python/tests/integration_webhooks/: conftest.py  test_lifecycle.py  test_retry.py
python/tests/property/: test_pagination_invariants.py  test_retry_invariants.py
python/tests/unit/: test_async_resources.py  test_audit_fixes.py  test_client_construction.py  test_client_edges.py  test_env_resolution.py  test_errors.py  test_pagination.py  test_pagination_edges.py  test_post_idempotency.py  test_resources.py  test_retry.py
python/tests/webhooks/: test_compute_signature.py  test_reason_codes.py  test_verify.py
scripts/: fetch_openapi.sh  filter_openapi.py  gen_models.sh
